--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,5 +1,13 @@
-# 环境变量
-NEXT_PUBLIC_API_URL=https://api.aizhao.icu/api
+# API & WebSocket
+NEXT_PUBLIC_API_BASE=http://localhost:3000/api
+# 兼容旧配置，可选
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXT_PUBLIC_WS_URL=http://localhost:3000
+
+# COS 配置
 NEXT_PUBLIC_COS_BUCKET=ai-photo-prod-1379020062
 NEXT_PUBLIC_COS_REGION=ap-guangzhou
 NEXT_PUBLIC_COS_IMAGE_DOMAIN=ai-photo-prod-1379020062.picgz.myqcloud.com
+
+# Sentry
+NEXT_PUBLIC_SENTRY_DSN=
