--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,24 +18,28 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@sentry/nextjs": "8.55.0",
     "@tanstack/react-query": "^5.12.2",
     "antd": "^5.12.0",
     "asynckit": "^0.4.0",
     "axios": "^1.6.2",
+    "color-convert": "2.0.1",
     "combined-stream": "^1.0.8",
     "cos-js-sdk-v5": "^1.7.0",
     "dayjs": "^1.11.10",
     "delayed-stream": "^1.0.0",
+    "isexe": "2.0.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-is": "18.2.0",
     "resize-observer-polyfill": "^1.5.1",
+    "socket.io-client": "4.8.1",
     "toggle-selection": "^1.0.6",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@next/swc-win32-x64-msvc": "^16.0.0",
     "@playwright/test": "^1.40.1",
     "@tailwindcss/postcss": "4.1.16",
     "@testing-library/jest-dom": "^5.16.5",
