--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,15 @@ tmp/
 
 # 空文件
 nul
+
+# 测试结果
+test-results/
+frontend/test-results/
+playwright-report/
+
+# 临时开发目录
+apps/
+
+# Claude/Serena缓存
+.claude/settings.local.json
+.serena/cache/
