--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,6 +97,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
+    "@typescript-eslint/eslint-plugin": "8.46.4",
+    "@typescript-eslint/parser": "8.46.4",
     "autoprefixer": "10.4.21",
     "cross-env": "10.1.0",
     "eslint": "^8",
