--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,6 +134,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Scan backend image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: ghcr.io/${{ github.repository }}/backend:main-${{ github.sha }}
@@ -141,6 +142,7 @@ jobs:
           exit-code: '1'
 
       - name: Scan frontend image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: aquasecurity/trivy-action@0.20.0
         with:
           image-ref: ghcr.io/${{ github.repository }}/frontend:main-${{ github.sha }}
@@ -148,35 +150,47 @@ jobs:
           exit-code: '1'
 
   deploy:
-    name: Deploy to Cluster
+    name: Deploy via Docker Compose
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment:
       name: production
     env:
-      KUBECONFIG_DATA: ${{ secrets.KUBECONFIG_DATA }}
+      DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v3
+      - name: Deploy on server
+        uses: appleboy/ssh-action@v1.0.1
         with:
-          version: 'v1.29.0'
-      - name: Configure kubeconfig
-        if: env.KUBECONFIG_DATA != ''
-        run: |
-          mkdir -p ~/.kube
-          echo "$KUBECONFIG_DATA" | base64 --decode > ~/.kube/config
-          chmod 600 ~/.kube/config
-      - name: Rolling update backend
-        if: env.KUBECONFIG_DATA != ''
-        run: |
-          kubectl set image deployment/backend backend=backend:${{ github.sha }}
-          kubectl rollout status deployment/backend --timeout=120s
-      - name: Rolling update frontend
-        if: env.KUBECONFIG_DATA != ''
-        run: |
-          kubectl set image deployment/frontend frontend=frontend:${{ github.sha }}
-          kubectl rollout status deployment/frontend --timeout=120s
-      - name: Skip deploy (missing kubeconfig)
-        if: env.KUBECONFIG_DATA == ''
-        run: echo "未配置 KUBECONFIG_DATA secret，跳过部署阶段。"
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            set -euo pipefail
+
+            echo "切到部署目录: $DEPLOY_PATH"
+            cd "$DEPLOY_PATH"
+
+            echo "拉取最新代码..."
+            git fetch origin main
+            git reset --hard origin/main
+
+            echo "使用 Docker Compose 重启服务..."
+            if command -v docker compose >/dev/null 2>&1; then
+              DC="docker compose"
+            else
+              DC="docker-compose"
+            fi
+
+            echo "拉取镜像..."
+            $DC -f docker-compose.prod.yml pull || true
+
+            echo "启动服务..."
+            $DC -f docker-compose.prod.yml up -d --build
+
+            echo "列出服务状态..."
+            $DC -f docker-compose.prod.yml ps
+
+            echo "清理无用镜像..."
+            docker image prune -f || true
